# sovo

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: dbops.rs  mod.rs
backend/src/config/: mod.rs
backend/src/handler/: endpoints.rs  mod.rs
backend/src/schema/: mod.rs
frontend/: index.html  package-lock.json  package.json  rollup.config.js  tailwind.config.cjs
frontend/public/: index.html
frontend/src/: App.svelte
frontend/src/components/: Candidate.svelte  Create.svelte  Guest.svelte  Host.svelte  Login.svelte  Preview.svelte  Queue.svelte  Search.svelte  Song.svelte
frontend/src/stores/: partyState.ts  player.ts  searchTerm.ts
frontend/src/types/: candidate.type.ts  partyState.type.ts  song.type.ts
