[package]
name = "sovo-graphql-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "^4"
async-graphql-actix-web = "^4"
async-graphql = { version = "^4", features = ["bson", "chrono"] }
serde = "^1"
serde_json = "^1"
dotenv = "^0.15"
futures = "^0.3"
mongodb = "^2.3"
log = "^0.4"
env_logger = "^0.9"
anyhow = "^1"


# development imports
async-stream = "0.3"
futures-util = "0.3"
futures-timer = "3"

[features]
default = ["strict-ip-filter"]
strict-ip-filter = []